--- a/action.yml
+++ b/action.yml
@@ -28,5 +28,5 @@ runs:
         
     - name: Run move script
       run: |
-        python move_md_files.py ${{ inputs.src_dir }} ${{ inputs.dest_dir }}
+        ${{ github.action_path }} python move_md_files.py ${{ inputs.src_dir }} ${{ inputs.dest_dir }}
       shell: bash
