--- a/action.yml
+++ b/action.yml
@@ -21,12 +21,12 @@ runs:
         python-version: '3.9'
 
     - name: Set GitHub Path
-      run: echo "$GITHUB_ACTION_PATH" >> $GITHUB_PATH
+      run: echo "$GITHUB_ACTION_PATH" >> $GITHUB_PATH; ls $GITHUB_PATH
       shell: bash
       env:
         GITHUB_ACTION_PATH: ${{ github.action_path }}
         
     - name: Run move script
       run: |
-        ${{ github.action_path }} python move_md_files.py ${{ inputs.src_dir }} ${{ inputs.dest_dir }}
+        ${{ github.action_path }}/python move_md_files.py ${{ inputs.src_dir }} ${{ inputs.dest_dir }}
       shell: bash
